@@ -28,6 +28,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 
 import static org.lwjgl.glfw.GLFW.*;
+import static org.lwjgl.opengl.GL11.*;
 import static org.lwjgl.opengl.GL13.GL_TEXTURE0;
 import static org.lwjgl.opengl.GL13.glActiveTexture;
 import static org.lwjgl.system.MemoryUtil.NULL;
@@ -35,6 +36,12 @@ import static org.lwjgl.system.MemoryUtil.NULL;
 public class TankBattleGame extends GameEngine implements NetworkCallbackHandler {
 
     private static final Logger logger = LoggerFactory.getLogger(TankBattleGame.class);
+
+    private static final float UI_TEXT_SCALE_NORMAL = 0.5f; // Base size
+    private static final float UI_TEXT_SCALE_LARGE = 0.85f;  // Larger size
+    private static final float UI_TEXT_SCALE_SECONDARY_STATUS = 0.65f; // Slightly smaller for secondary status
+    private static final float UI_TEXT_SCALE_STATUS = 0.8f; // Size for status messages like HIT POINTS
+    private static final float UI_TEXT_SCALE_ANNOUNCEMENT = 1.3f; // For large center messages like announcements
 
     private Shader shader;
     private Renderer renderer;
@@ -96,13 +103,17 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     public void initGame() {
         logger.info("Initializing TankBattleGame...");
         try {
-            // Load shaders (specific to this game's rendering needs)
-            shader = new Shader("/shaders/quad.vert", "/shaders/quad.frag"); // Ensure paths are correct
+            glEnable(GL_BLEND); // Enable blending
+            // Set the blend function for standard alpha blending
+            // Formula: finalColor = (sourceColor * sourceAlpha) + (destColor * (1 - sourceAlpha))
+            glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
+            logger.debug("OpenGL blending enabled (GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA).");
+
+            shader = new Shader("/shaders/quad.vert", "/shaders/quad.frag");
             shader.bind();
 
-            // Create game-specific renderer, camera, UI manager
             renderer = new Renderer();
-            camera = new Camera(windowWidth, windowHeight); // Use width/height from GameEngine
+            camera = new Camera(windowWidth, windowHeight);
             uiManager = new UIManager();
 
             // Load game textures
@@ -111,44 +122,49 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
             dirtTexture = new Texture("textures/dirt.png");
             bulletTexture = new Texture("textures/bullet.png");
             tankTexture = new Texture("textures/tank.png");
-            uiManager.loadFontTexture("textures/font.png");
+            uiManager.loadFontTexture("textures/font14px.png");
             logger.debug("Textures loaded.");
 
-            // Initialize Map (using client-specific map class)
-            // TODO: Map dimensions could come from server later, or use defaults
             gameMap = new ClientGameMap(50, 50);
 
             // Setup projection matrix
-            // TODO: camera might handle aspect ratio
             shader.bind();
             shader.setUniformMat4f("u_projection", camera.getProjectionMatrix());
             shader.setUniform1i("u_texture", 0); // Use texture unit 0
 
-            // Start networking AFTER core graphics setup
+            // Start networking game client AFTER core graphics setup
             logger.info("Starting network client...");
-            // Pass 'this' (the TankBattleGame instance) for callbacks
             gameClient = new GameClient(serverIp, serverPort, playerName, this);
-            new Thread(gameClient, "GameClientThread").start(); // Name the thread
+            new Thread(gameClient, "GameClientThread").start();
 
         } catch (IOException e) {
             logger.error("Failed to initialize game resources", e);
+
             // Use SwingUtilities for UI thread safety with JOptionPane
             SwingUtilities.invokeLater(() -> {
                 JOptionPane.showMessageDialog(null, "Failed to load game resources:\n" + e.getMessage(), "Initialization Error", JOptionPane.ERROR_MESSAGE);
             });
+
             // Signal engine to close if init fails critically
             if (windowHandle != NULL) {
                 glfwSetWindowShouldClose(windowHandle, true);
             } else {
                 System.exit(1); // Force exit if window wasn't even created
             }
+
         } catch (Exception e) {
             logger.error("Unexpected error during game initialization", e);
+
             SwingUtilities.invokeLater(() -> {
                 JOptionPane.showMessageDialog(null, "Unexpected error initializing game:\n" + e.getMessage(), "Initialization Error", JOptionPane.ERROR_MESSAGE);
             });
-            if (windowHandle != NULL) { glfwSetWindowShouldClose(windowHandle, true); }
-            else { System.exit(1); }
+
+            if (windowHandle != NULL) {
+                glfwSetWindowShouldClose(windowHandle, true);
+            }
+            else {
+                System.exit(1);
+            }
         }
     }
 
@@ -157,17 +173,17 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         // Update local bullet positions for client-side prediction
         List<ClientBullet> bulletsToRemove = new ArrayList<>();
         long now = System.currentTimeMillis();
+
         for (ClientBullet bullet : bullets) {
-            bullet.update(deltaTime); // ClientBullet handles its own movement prediction
-            // Check expiry based on spawn time from BulletData
-            if (now - bullet.getSpawnTime() >= BulletData.LIFETIME_MS) {
-                bulletsToRemove.add(bullet);
-            }
-            // Optional: Add boundary check based on gameMapData or map dimensions
-            else if (gameMap != null && gameMap.isOutOfBounds(bullet.getPosition().x, bullet.getPosition().y, BulletData.SIZE / 2.0f)) {
+            bullet.update(deltaTime);
+
+            // Check for bullet expiry or out of bounds
+            if ((now - bullet.getSpawnTime() >= BulletData.LIFETIME_MS) ||
+                    (gameMap != null && gameMap.isOutOfBounds(bullet.getPosition().x, bullet.getPosition().y, BulletData.SIZE / 2.0f))) {
                 bulletsToRemove.add(bullet);
             }
         }
+
         bullets.removeAll(bulletsToRemove);
 
         // Update camera position to follow local tank (if it exists)
@@ -181,26 +197,21 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
 
         // Update announcements display timer
         if (!announcements.isEmpty() && (now - lastAnnouncementTime > ANNOUNCEMENT_DISPLAY_TIME_MS)) {
-            announcements.remove(0); // Remove the oldest announcement
-            lastAnnouncementTime = announcements.isEmpty() ? 0 : now; // Reset timer
+            announcements.removeFirst();    // Remove the oldest announcement
+            lastAnnouncementTime = announcements.isEmpty() ? 0 : now;   // Reset timer
         }
     }
 
     @Override
     public void renderGame() {
-        // --- Render World ---
         shader.bind();
         shader.setUniformMat4f("u_view", camera.getViewMatrix());
         shader.setUniform1i("u_texture", 0); // Ensure texture unit 0
         glActiveTexture(GL_TEXTURE0);
 
-        // Calculate view bounds for culling (optional optimization)
-        // float viewLeft = ... camera.getViewLeft() ...;
-
         // Render Map
         if (gameMap != null) {
-            // TODO: Am I using centerPos or remove it?
-            Vector2f centerPos = (localTank != null) ? localTank.getPosition() : null;
+            // Remove unused centerPos variable
             float range = isSpectating ? Float.MAX_VALUE : VIEW_RANGE;
             gameMap.render(renderer, shader, grassTexture, dirtTexture, camera, range);
         }
@@ -209,28 +220,60 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         Vector2f playerPos = (localTank != null) ? localTank.getPosition() : null;
         float renderRangeSq = isSpectating ? Float.MAX_VALUE : VIEW_RANGE * VIEW_RANGE;
 
-        tankTexture.bind();
+        tankTexture.bind(); // Bind tank texture once
+
         for (ClientTank tank : tanks.values()) {
             if (isObjectVisible(tank.getPosition(), playerPos, renderRangeSq)) {
                 shader.setUniform3f("u_tintColor", tank.getColor());
-                // Use TankData.SIZE from common module
+
                 renderer.drawQuad(tank.getPosition().x, tank.getPosition().y,
                         TankData.SIZE, TankData.SIZE, // <<< CHANGED HERE
                         tank.getRotation(), shader);
             }
         }
+
         shader.setUniform3f("u_tintColor", 1.0f, 1.0f, 1.0f);
 
         // Render Bullets
         bulletTexture.bind(); // Bind bullet texture once
+        shader.setUniform3f("u_tintColor", 1.0f, 1.0f, 1.0f);
+
         for (ClientBullet bullet : bullets) {
-            // ClientBullet needs getPosition()
             if (isObjectVisible(bullet.getPosition(), playerPos, renderRangeSq)) {
-                renderer.drawQuad(bullet.getPosition().x, bullet.getPosition().y, BulletData.SIZE, BulletData.SIZE, 0, shader); // No rotation for bullets
+                Vector2f velocity = bullet.getVelocity();
+
+                float rotationDegrees = 0.0f;
+
+                // Calculate rotation only if the bullet is actually moving
+                // (Avoids issues with atan2(0, 0) which is undefined but often returns 0)
+                if (velocity.lengthSquared() > 0.0001f) { // Use a small threshold
+                    // Calculate angle in radians from velocity vector components
+                    // atan2(y, x) gives angle relative to positive X axis
+                    double angleRadians = Math.atan2(velocity.y, velocity.x);
+
+                    // Convert radians to degrees
+                    float angleDegrees = (float) Math.toDegrees(angleRadians);
+
+                    // Adjust angle:
+                    // Texture points UP at 0 degrees rotation.
+                    // atan2 gives 90 degrees for UP.
+                    // atan2 gives 0 degrees for RIGHT.
+                    // We need to subtract 90 degrees from atan2 result.
+                    rotationDegrees = angleDegrees - 90.0f;
+                }
+
+                Vector2f bulletPosition = bullet.getPosition();
+                logger.trace("Rendering Bullet: Pos=({}, {}), Vel=({}, {}), Rotation={}",
+                        bulletPosition.x, bulletPosition.y, velocity.x, velocity.y, rotationDegrees);
+
+                // Draw the quad using the calculated rotation
+                renderer.drawQuad(bullet.getPosition().x, bullet.getPosition().y,
+                        BulletData.SIZE, BulletData.SIZE,
+                        rotationDegrees,
+                        shader);
             }
         }
 
-        // --- Render UI ---
         renderUI();
     }
 
@@ -240,18 +283,21 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         return objectPos.distanceSquared(playerPos) <= rangeSq;
     }
 
-    // UI Rendering Logic (previously in Game.renderUI)
     private void renderUI() {
         uiManager.startUIRendering(windowWidth, windowHeight);
 
-        // Render Lives
+        // Define positions for top-left UI elements
+        final float statusTextX = 10; // X position for status text
+        final float hitPointsY = 10; // Y position for Hit Points
+        final float timerY = 35;     // Y position for Timer (below Hit Points + padding)
+
+        // Render tank health and game state
         if (localTank != null && !isSpectating) {
-            // ClientTank needs getLives()
-            uiManager.drawText("HIT POINTS: " + localTank.getHitPoints(), 10, 10, 1.5f, Colors.GREEN);
+            uiManager.drawText("HIT POINTS: " + localTank.getHitPoints(), statusTextX, hitPointsY, UI_TEXT_SCALE_STATUS, Colors.GREEN);
         } else if (isSpectating) {
-            uiManager.drawText("SPECTATING", 10, 10, 1.5f, Colors.YELLOW);
+            uiManager.drawText("SPECTATING", statusTextX, hitPointsY, UI_TEXT_SCALE_STATUS, Colors.YELLOW);
         } else {
-            uiManager.drawText(currentGameState == GameState.CONNECTING ? "CONNECTING..." : "LOADING...", 10, 10, 1.5f, Colors.WHITE);
+            uiManager.drawText(currentGameState == GameState.CONNECTING ? "CONNECTING..." : "LOADING...", statusTextX, hitPointsY, UI_TEXT_SCALE_STATUS, Colors.WHITE);
         }
 
         // Render Timer
@@ -259,38 +305,54 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
             long elapsedMillis = System.currentTimeMillis() - roundStartTimeMillis;
             long seconds = (elapsedMillis / 1000) % 60;
             long minutes = (elapsedMillis / (1000 * 60)) % 60;
-            String timeStr = String.format("TIME: %02d:%02d", minutes, seconds);
-            uiManager.drawText(timeStr, windowWidth - 150, 10, 1.5f, Colors.WHITE);
+            long hours = (elapsedMillis / (1000 * 60 * 60)) % 24;
+
+            String timeStr;
+
+            if (hours > 0) {
+                timeStr = String.format("TIME: %02d:%02d:%02d", hours, minutes, seconds);
+            }
+            else {
+                timeStr = String.format("TIME: %02d:%02d", minutes, seconds);
+            }
+
+            uiManager.drawText(timeStr, statusTextX, timerY, UI_TEXT_SCALE_SECONDARY_STATUS, Colors.WHITE);
         } else if (currentGameState == GameState.ROUND_OVER && finalElapsedTimeMillis >= 0) {
             // TODO: Timer display handled by announcements in ROUND_OVER
         }
 
+        // --- Render Centered Messages ---
+        final float centerMessageY = windowHeight * 0.4f; // Vertical position (adjust 0.4f if needed)
+
         // Render Announcements
         if (!announcements.isEmpty()) {
             String announcement = announcements.getFirst();
-            float textWidth = uiManager.getTextWidth(announcement, 2.0f);
-            float x = (windowWidth - textWidth) / 2.0f;
-            float y = windowHeight * 0.4f; // Centered-ish
-            uiManager.drawText(announcement, x, y, 2.0f, Colors.YELLOW);
+            float textWidth = uiManager.getTextWidth(announcement, UI_TEXT_SCALE_ANNOUNCEMENT);
+            float x = (windowWidth - textWidth) / 2.0f; // Center horizontally
+            uiManager.drawText(announcement, x, centerMessageY, UI_TEXT_SCALE_ANNOUNCEMENT, Colors.RED);
         }
 
         // Render Game State messages
         String stateMessage = "";
+
         switch (currentGameState) {
             case WAITING:
                 stateMessage = "WAITING FOR PLAYERS (" + tanks.size() + ")";
                 break;
             case COUNTDOWN:
-                stateMessage = "ROUND STARTING..."; // Announcements show numbers
+                // TODO: I want to show the countdown number here, "3... 2... 1...FIGHT!"
+                if (announcements.isEmpty()) { // Only show if no countdown number announcement
+                    stateMessage = "ROUND STARTING...";
+                }
                 break;
-            // Other states handled by lives/timer/announcements
         }
 
-        if (!stateMessage.isEmpty() && announcements.isEmpty()) {
-            float textWidth = uiManager.getTextWidth(stateMessage, 2.0f);
-            float x = (windowWidth - textWidth) / 2.0f;
-            float y = windowHeight * 0.4f;
-            uiManager.drawText(stateMessage, x, y, 2.0f, Colors.WHITE);
+        if (!stateMessage.isEmpty()) { // Check if we have a state message to display
+            // Calculate width needed to center the text
+            float textWidth = uiManager.getTextWidth(stateMessage, UI_TEXT_SCALE_ANNOUNCEMENT);
+            float x = (windowWidth - textWidth) / 2.0f; // Center horizontally
+            // Draw using the large announcement scale
+            uiManager.drawText(stateMessage, x, centerMessageY, UI_TEXT_SCALE_ANNOUNCEMENT, Colors.RED);
         }
 
         uiManager.endUIRendering();
@@ -299,13 +361,10 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
 
     @Override
     public void handleGameInput(float deltaTime) {
-        // InputHandler instance comes from GameEngine (`this.inputHandler`)
         if (inputHandler == null) return;
 
-        // Handle Escape Key (Moved from original handleInput - engine doesn't know about hosting)
         if (inputHandler.isKeyDown(GLFW_KEY_ESCAPE)) {
             logger.info("Escape key pressed. Closing game window.");
-            // Signal the engine's loop to stop
             if(windowHandle != NULL) glfwSetWindowShouldClose(windowHandle, true);
             return;
         }
@@ -322,6 +381,7 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
             if (keyW != prevKeyW || keyS != prevKeyS || keyA != prevKeyA || keyD != prevKeyD) {
                 // Send only when input state changes
                 if (gameClient != null && gameClient.isConnected()) {
+                    logger.debug("Sending movement input: W:{} S:{} A:{} D:{}", keyW, keyS, keyA, keyD);
                     gameClient.sendInput(keyW, keyS, keyA, keyD);
                 }
 
@@ -338,6 +398,7 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
                     logger.debug("Sending SHOOT command");
                     gameClient.sendShoot();
                 }
+
                 inputHandler.resetKey(GLFW_KEY_SPACE); // Consume press event
             }
         }
@@ -347,14 +408,13 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     public void cleanupGame() {
         logger.info("Cleaning up TankBattleGame resources...");
 
-        // 1. Stop Network Client
+        // Stop the game client if it's running
+
         if (gameClient != null) {
             logger.debug("Stopping network client...");
+
             try {
-                // gameClient.stop() should be synchronous enough now
                 gameClient.stop();
-                // Brief pause might still be helpful sometimes, but not strictly required
-                // Thread.sleep(100);
             } catch (Exception e) {
                 logger.error("Error stopping game client", e);
             } finally {
@@ -363,15 +423,24 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
             }
         }
 
-        // 2. Delete Game-Specific OpenGL Resources
+        // Cleanup OpenGL resources
+
         logger.debug("Deleting game textures, shaders, renderer, UI...");
+
         try { if (tankTexture != null) tankTexture.delete(); } catch (Exception e) { logger.error("Error deleting tankTexture", e); }
         try { if (bulletTexture != null) bulletTexture.delete(); } catch (Exception e) { logger.error("Error deleting bulletTexture", e); }
         try { if (grassTexture != null) grassTexture.delete(); } catch (Exception e) { logger.error("Error deleting grassTexture", e); }
         try { if (dirtTexture != null) dirtTexture.delete(); } catch (Exception e) { logger.error("Error deleting dirtTexture", e); }
 
         // UIManager cleanup deletes its font texture, shader, renderer
-        try { if (uiManager != null) uiManager.cleanup(); } catch (Exception e) { logger.error("Error cleaning up uiManager", e); }
+        try {
+            if (uiManager != null) {
+                uiManager.cleanup();
+            }
+        } catch (Exception e) {
+            logger.error("Error cleaning up uiManager", e);
+        }
+
         logger.debug("Game-specific OpenGL resources deleted.");
 
         // Clear game state collections
@@ -380,46 +449,40 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         announcements.clear();
 
         logger.info("TankBattleGame cleanup finished.");
-        // GameEngine.cleanupEngine() will handle GLFW cleanup after this returns.
     }
-
-    // --- Network Callback Methods (Called by GameClient) ---
 
     // Called when ASSIGN_ID is received
     public void setLocalPlayerId(int id) {
         this.localPlayerId = id;
         logger.info("Assigned local player ID: {}", id);
-        // Find/Update the ClientTank once NEW_PLAYER arrives
     }
 
     @Override
     public void addOrUpdateTank(int id, float x, float y, float rotation, String name, float r, float g, float b) {
         ClientTank tank = tanks.get(id);
 
-        if (tank == null) { // Tank doesn't exist, create it
+        if (tank == null) {
             logger.info("Creating new ClientTank for player ID: {} Name: {}", id, name);
-            TankData data = new TankData(); // Create common data object
-            // Set initial state (lives will be updated by PLAYER_LIVES shortly)
-            data.updateFromServer(id, name, x, y, rotation, r, g, b); // Use initial lives if -1 passed
+
+            TankData data = new TankData();
+
+            data.updateFromServer(id, name, x, y, rotation, r, g, b);
+
             tank = new ClientTank(data); // Create client wrapper
 
-            // Put the NEW tank into the map *after* creating it
-            tanks.put(id, tank);
+            tanks.put(id, tank);    // Put the NEW tank into the map *after* creating it
 
             if (id == localPlayerId) {
-                localTank = tank; // Assign local tank reference
-                // Initial spectator status depends on initial lives received or inferred
-                isSpectating = tank.isDestroyed(); // Check initial alive status
+                localTank = tank;
+                isSpectating = tank.isDestroyed();
                 logger.info("Local tank object created. Spectating: {}", isSpectating);
             }
         } else {
-            // Tank already exists, just update its data
-            logger.trace("Updating existing ClientTank for player ID: {}", id); // Use Trace
+            logger.trace("Updating existing ClientTank for player ID: {}", id);
+
             tank.getTankData().updateFromServer(id, name, x, y, rotation, r, g, b);
-            // Ensure the visual entity position matches the data
             tank.updatePositionFromData();
 
-            // Check if local player just respawned or joined alive
             if (id == localPlayerId) {
                 localTank = tank;
             }
@@ -429,11 +492,14 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     // Called when PLAYER_LEFT is received
     public void removeTank(int id) {
         ClientTank removed = tanks.remove(id);
+
         if (removed != null) {
-            logger.info("Removed tank for player ID: {} Name: {}", id, removed.getName()); // ClientTank needs getName()
+            logger.info("Removed tank for player ID: {} Name: {}", id, removed.getName());
+
             if (id == localPlayerId) {
-                localTank = null; // Clear local reference
-                isSpectating = true; // Assume spectating if local tank removed mid-game
+                localTank = null;
+                isSpectating = true;
+
                 logger.info("Local tank removed. Entering spectator mode.");
             }
         } else {
@@ -441,19 +507,14 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         }
     }
 
-    // Called when PLAYER_UPDATE is received (only pos/rot typically)
+    // Called when PLAYER_UPDATE is received
     public void updateTankState(int id, float x, float y, float rotation) {
         ClientTank tank = tanks.get(id);
+
         if (tank != null) {
-            // Apply server position directly to the common data object
-            // Client-side prediction might be happening elsewhere, server state is authoritative
             var tankData = tank.getTankData();
             tankData.setPosition(x, y);
             tankData.setRotation(rotation);
-        } else {
-            // TODO: Why is this else block here?
-            // Log if update received for a tank that doesn't exist client-side yet
-            // logger.warn("Received updateTankState for unknown ID: {}", id);
         }
     }
 
@@ -469,6 +530,7 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         ClientBullet clientBullet = new ClientBullet(bulletData);
 
         bullets.add(clientBullet);
+
         logger.trace("Spawned bullet owned by {}", ownerId);
     }
 
@@ -488,9 +550,10 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
         // This is a placeholder for the actual logic to update player lives on the UI.
         // The server has the actual number of lives or respawns allowed. The client will just display it.
         ClientTank tank = tanks.get(playerId);
+
         if (tank != null) {
-            //tank.getTankData().setLives(lives);
             logger.info("Player {} lives set to: {}", tank.getName(), lives);
+
             if (playerId == localPlayerId) {
                 // TODO: Move this logic to spectate to its own NetworkProtocol command
                 /*
@@ -513,7 +576,9 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     // Called when GAME_STATE is received
     public void setGameState(GameState state, long timeData) {
         logger.info("Game state changed to: {} with time data: {}", state, timeData);
+
         this.currentGameState = state;
+
         // Clear announcements on most state changes, except maybe within countdown?
         if(state != GameState.COUNTDOWN) { // Keep announcements during countdown? Optional.
             announcements.clear();
@@ -528,7 +593,7 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
                 // Maybe clear client-side bullets optimistically.
                 bullets.clear();
                 // Update spectator status based on current lives
-                if(localTank != null) {
+                if (localTank != null) {
                     logger.info("Local tank object created. Local tank: {}", localTank.getName());
                     isSpectating = localTank.isDestroyed();
                 } else {
@@ -558,7 +623,9 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     // Called when ANNOUNCE is received
     public void addAnnouncement(String message) {
         logger.info("Announcement: {}", message);
+
         announcements.add(message);
+
         if (announcements.size() == 1) { // Start timer only if it was empty
             lastAnnouncementTime = System.currentTimeMillis();
         }
@@ -567,28 +634,35 @@ public class TankBattleGame extends GameEngine implements NetworkCallbackHandler
     // Called by GameClient on connection failure
     public void connectionFailed(String reason) {
         logger.error("Connection failed: {}", reason);
+
         currentGameState = GameState.ERROR; // Set an error state
         announcements.clear();
+
         announcements.add("CONNECTION FAILED");
         announcements.add(reason);
         lastAnnouncementTime = System.currentTimeMillis();
+
         // Show message and signal window close
         SwingUtilities.invokeLater(() -> {
             JOptionPane.showMessageDialog(null, "Connection failed: " + reason + "\nExiting.", "Connection Error", JOptionPane.ERROR_MESSAGE);
         });
+
         if (windowHandle != NULL) glfwSetWindowShouldClose(windowHandle, true);
     }
 
     // Called by GameClient on graceful disconnect from server
     public void disconnected() {
         logger.warn("Disconnected from server.");
+
         currentGameState = GameState.ERROR; // Set an error state or specific disconnected state
         announcements.clear();
         announcements.add("DISCONNECTED");
         lastAnnouncementTime = System.currentTimeMillis();
+
         SwingUtilities.invokeLater(() -> {
             JOptionPane.showMessageDialog(null, "Disconnected from server.\nExiting.", "Disconnected", JOptionPane.INFORMATION_MESSAGE);
         });
+
         if (windowHandle != NULL) glfwSetWindowShouldClose(windowHandle, true);
     }
 }
